--- a/timerStyle.css
+++ b/timerStyle.css
@@ -117,17 +117,84 @@ header .logo .author {
     padding: 40px;
 }
 
+/* music icon */
+.music {
+  width: 3.5rem;
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 100px;
+  position: absolute;
+  left: 2rem;
+  bottom: 2rem;
+}
+
+.music:hover {
+  scale: 1.1;
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
+#spotify {
+  position: fixed; 
+  left: 6.5rem;
+  width: 25vw;
+  height: 30vh;
+  display: inline-block;
+  z-index: 1000;
+  bottom: -5%;
+}
+
+#spotify img.exit-spotify-popup {
+  position: absolute;
+  transform: translateY(-120%);
+  right: 0;
+  border: none;
+  font-weight: bold;
+  cursor: pointer;
+  z-index: 1;
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+#spotify .exit-spotify-popup img{
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+#spotify button:hover, #task-popup .exit-popup:hover {
+  background-color: #fda085;
+}
+
+#spotify iframe {
+  display: block;
+  border: none;
+  width: 100%;
+  height: 100%;
+}
+
+
 /* popup task overlay */
 #task-popup {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    flex-direction: column;
+    transform: translateY(-105%);
+    right: 1.5rem;
     z-index: 1000;
+}
+
+#task-popup img.exit-task-popup {
+  position: absolute;
+  transform: translateY(-110%);
+  right: 8%;
+  border: none;
+  padding: 2px 10px 2px 10px;
+  border-radius: 50%;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  z-index: 1;
+  width: 3.8rem;
 }
 
 /* Popup container on the right */
@@ -153,7 +220,7 @@ header .logo .author {
 }
 
 /* buttons */
-.task-btns button, .timer-btns-container button {
+.task-btns button, .timer-btns-container button, #stop-popup .stop-popup-content .stop-buttons button {
     background-color: #8c52ff;
     border-radius: 20px;
     color: white;
@@ -164,7 +231,7 @@ header .logo .author {
     cursor: pointer;
 }
 
-.task-btns button:hover {
+.task-btns button:hover, #stop-popup .stop-popup-content .stop-buttons button:hover {
     background-color: #fda085;
     cursor: pointer;
 }
@@ -210,4 +277,37 @@ header .logo .author {
 .task:hover {
     transform: scale(1.2);
     background-color: #fda085;
+}
+
+/* stop popup */
+#stop-popup {
+    position: fixed;
+    top: 40%;
+    right: 2.5rem;
+    width: 26vw;
+    height: 35vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 20px;
+    padding: 20px;
+}
+
+#stop-popup .stop-popup-content {
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+#stop-popup .stop-popup-content h1 {
+  padding: 20px;
+  font-size: 1.5rem;
+}
+
+#stop-popup .stop-popup-content .stop-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
