--- a/timerStyle.css
+++ b/timerStyle.css
@@ -220,7 +220,7 @@ header .logo .author {
 }
 
 /* buttons */
-.task-btns button, .timer-btns-container button, #stop-popup .stop-popup-content .stop-buttons button {
+.task-btns button, .timer-btns-container button, #stop-popup .stop-popup-content .stop-buttons button, #break-btns .break-buttons button {
     background-color: #8c52ff;
     border-radius: 20px;
     color: white;
@@ -231,7 +231,7 @@ header .logo .author {
     cursor: pointer;
 }
 
-.task-btns button:hover, #stop-popup .stop-popup-content .stop-buttons button:hover {
+.task-btns button:hover, #stop-popup .stop-popup-content .stop-buttons button:hover, #break-btns .break-buttons button:hover{
     background-color: #fda085;
     cursor: pointer;
 }
@@ -282,8 +282,8 @@ header .logo .author {
 /* stop popup */
 #stop-popup {
     position: fixed;
-    top: 40%;
-    right: 2.5rem;
+    top: 30%;
+    left: 2.5rem;
     width: 26vw;
     height: 35vh;
     display: flex;
@@ -293,6 +293,24 @@ header .logo .author {
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 20px;
     padding: 20px;
+}
+
+
+#stop-popup img.exit-stop-popup {
+  position: absolute;
+  right: 0;
+  top: -2.75rem;
+  border: none;
+  font-weight: bold;
+  cursor: pointer;
+  z-index: 1;
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+#stop-popup .exit-stop-popup img{
+  width: 2.5rem;
+  height: 2.5rem;
 }
 
 #stop-popup .stop-popup-content {
