--- a/registration.css
+++ b/registration.css
@@ -147,3 +147,27 @@ button:hover {
     font-weight: 500;
     margin-bottom: 10px;
 }
+
+.login input[type="email"]{
+    width: 80%;
+    padding: 12px;
+    border: none;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    font-size: 16px;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.9);
+    color: #333;
+}
+
+.login input[type="password"]{
+    width: 80%;
+    padding: 12px;
+    border: none;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    font-size: 16px;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.9);
+    color: #333;
+} 
