--- a/tasksStyle.css
+++ b/tasksStyle.css
@@ -137,10 +137,9 @@ header {
   gap: 20px;
   margin-bottom: 10px;
   padding: 20px;
-  left:5%;
-  top:20%;
-  width:100%;
-  min-height: 700px;
+  left:85px;
+  top:180px;
+  width:2000px;
   max-width: 90%;
 }
 
@@ -148,8 +147,8 @@ header {
   background: rgba(252, 218, 240, 0.556);
   border-radius: 20px;
   padding: 20px;
-  width: 100%;
-  min-height: 45px;
+  width: 2000px;
+  height: 680px;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
@@ -163,7 +162,7 @@ header {
   background: rgba(103, 56, 83, 0.47);
   padding: 5px 20px;
   border-radius: 50px;
-  font-size: 28px;
+  font-size: 1.5em;
   text-align: left;  
   color: white;
 }
@@ -359,4 +358,3 @@ header {
 .close:hover{
   background-color: #7d3e6174;
 }
-
